# pcl-online-recognition

./: README.md
online_obj_recognition/: CMakeLists.txt
online_obj_recognition/model/: 3DCNN.prototxt  3DCNN.prototxt~  3DCNN_deploy.prototxt  3DCNN_deploy.prototxt~  class_label_name.txt
online_obj_recognition/src/: caffe_classifier.cpp  caffe_classifier.hpp  main.cpp
